# EzCTFer

./: .env.example  README.md  mcp.json.example  pyproject.toml
src/ezctfer/: __init__.py  __main__.py
src/ezctfer/agent/: __init__.py  ctf_solver.py  thread_manager.py
src/ezctfer/config/: __init__.py  config_loader.py  log.py  prompts.py
src/ezctfer/llm/: __init__.py  chat_deepseek_fixed.py  chat_openai_compatible.py  llm_manager.py
src/ezctfer/mcp_integration/: __init__.py  ida_util.py  jadx_util.py  mcp_client.py  mcp_tool_adapter.py
src/ezctfer/rag/: __init__.py  rag_service.py
src/ezctfer/skills/: __init__.py  skill_adapter.py  skill_loader.py
src/ezctfer/tools/: __init__.py  tools.py
src/ezctfer/web/: __init__.py  app.py  monitor.py
src/ezctfer/web/templates/: index.html
